--- a/templates/home.html
+++ b/templates/home.html
@@ -1,85 +1,29 @@
 <!DOCTYPE html>
 <html >
-
-<head>
-  <meta charset="UTF-8">
-  <title>ML API</title>
-  <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-  
-  <style>
-    body {
-      background-color: #dce578;
-      font-family: 'Arimo', sans-serif;
-    }
-    
-    .login {
-      background-color: #43405e;
-      padding: 20px;
-      border-radius: 5px;
-      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-      width: 300px;
-      margin: 0 auto;
-      margin-top: 50px;
-    }
-    
-    h1 {
-      font-family: 'Pacifico', cursive;
-      font-size: 28px;
-      text-align: center;
-      color: #000000;
-    }
-    
-    form {
-      text-align: center;
-    }
-    
-    input[type="text"] {
-      padding: 10px;
-      width: 80%;
-      margin-bottom: 10px;
-      border: 1px solid #ccc;
-      border-radius: 3px;
-      font-size: 16px;
-    }
-    
-    button {
-      padding: 10px 20px;
-      background-color: #ba100d;
-      color: #fff;
-      border: none;
-      border-radius: 3px;
-      font-size: 18px;
-      cursor: pointer;
-    }
-    
-    button:hover {
-      background-color: #2980b9;
-    }
-  </style>
-</head>
-
-
-<body>
- <div class="login">
-	<h1><center>Titanic Survivors Predictor</center></h1>
-
-     <!-- Main Input For Receiving Query to our ML -->
-    <form action="{{ url_for('predict')}}"method="post">
-      <center><input type="text" name="Pclass" placeholder="Pclass (1 - 3)" required="required" /></center><br>
-    	<center><input type="text" name="Sex" placeholder="Sex (0 = F, 1 = M)" required="required" /></center><br>
-      <center><input type="text" name="Age" placeholder="Age (< 100)" required="required" /></center><br>
-      <center><input type="text" name="Fare" placeholder="Fare (< $1000)" required="required" /></center><br>
-      <center><input type="text" name="Family" placeholder="Family Size (<= 10)" required="required" /></center><br>
-      <center><button type="submit" class="btn btn-primary btn-block btn-large">Predict</button></center>
-    </form>
-   <br>
-   <br> 
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"> 
+    <title>ML API</title>  
+  </head>
+  <body>
+    <div class="login">
+     <h1><center>Titanic Survivors Predictor</center></h1>
    
- </div>
- <br>
-<center><font color="black" size="6">{{prediction_text}}</center></body>
-</body>
+        <!-- Main Input For Receiving Query to our ML -->
+       <form action="{{ url_for('predict')}}"method="post">
+         <center><input type="text" name="Pclass" placeholder="Pclass (1 - 3)" required="required" /></center><br>
+         <center><input type="text" name="Sex" placeholder="Sex (0 = F, 1 = M)" required="required" /></center><br>
+         <center><input type="text" name="Age" placeholder="Age (< 100)" required="required" /></center><br>
+         <center><input type="text" name="Fare" placeholder="Fare (< $1000)" required="required" /></center><br>
+         <center><input type="text" name="Family" placeholder="Family Size (<= 10)" required="required" /></center><br>
+         <center><button type="submit" class="btn btn-primary btn-block btn-large">Predict</button></center>
+       </form>
+      <br>
+      <br>       
+    </div>
+    <br>
+    <h2>
+      <center><font color="black" size="6">{{prediction_text}}</center></body>
+    </h2>   
+   </body>
 </html>
