--- a/templates/index.html
+++ b/templates/index.html
@@ -3,46 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titanic Survival Prediction ML API</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <title>Titanic Survivors Prediction ML API</title>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Titanic Survival Predictor</h1>
+            <h1>Titanic Survivors Predictor</h1>
         </header>
         
         <main>
             <form action="{{ url_for('predict') }}" method="post">
                 <fieldset>
-                    <legend>Passenger Information</legend>
-                    
+                    <legend>Passenger Information</legend>                    
+                             
                     <div class="form-group">
                         <label for="Pclass">Class:</label>
-                        <input type="number" id="Pclass" name="Pclass" min="1" max="3" required>
-                    </div>
-                    
+                        <select id="Pclass" name="Pclass" required>
+                          <option value="">Select class</option>
+                          <option value="1">Class 1</option>
+                          <option value="2">Class 2</option>
+                          <option value="3">Class 3</option>
+                        </select>
+                      </div>
+                               
+                   
                     <div class="form-group">
                         <label for="Sex">Gender:</label>
                         <select id="Sex" name="Sex" required>
-                            <option value="0">Female</option>
-                            <option value="1">Male</option>
+                          <option value="">Select gender</option>
+                          <option value="0">Female</option>
+                          <option value="1">Male</option>
                         </select>
-                    </div>
+                      </div>
+                      
                     
                     <div class="form-group">
                         <label for="Age">Age:</label>
-                        <input type="number" id="Age" name="Age" min="0" max="100" required>
+                        <input type="number" placeholder="Enter age" id="Age" name="Age" min="0" max="100" required>
                     </div>
                     
                     <div class="form-group">
                         <label for="Fare">Fare:</label>
-                        <input type="number" id="Fare" name="Fare" min="0" max="500" step="0.01" required>
+                        <input type="number" placeholder="Enter fare ($)" id="Fare" name="Fare" min="0" max="500" step="0.01" required>
                     </div>
                     
                     <div class="form-group">
                         <label for="Family">Family Members:</label>
-                        <input type="number" id="Family" name="Family" min="0" max="10" required>
+                        <input type="number" placeholder="Enter family size" id="Family" name="Family" min="0" max="10" required>
                     </div>
                     
                     <div class="form-group">
